# GT-code

./: README.md  TROUBLESHOOTING.md  app.py  config.yaml  doctor.bat  doctor.sh  pyproject.toml  requirements.txt  setup.bat  setup.sh  start.bat  start.sh
docs/: GT-CODE-ARCHITECTURE.md  GT-CODE-OVERVIEW.md
finetune/: .gitignore  README.md  build_dataset.py  export_to_ollama.sh  requirements.txt  seed_data.py  train_lora.sh
gt/: __init__.py  __main__.py  agent.py  banner.py  base.py  cli.py  config.py  hooks.py  improve.py  intent.py  interrupt.py  llm.py  machine.py  memory.py  office.py  permissions.py  profile.py  project_memory.py  prompts.py  router.py  skill_import.py  skills.py  subagent.py  theme.py  tools.py  ui.py  wizard.py
gt_code.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
skills/: backend.md  code-quality.md  conversation.md  data.md  debugging.md  excel.md  frontend.md  git.md  powerpoint.md  project-setup.md  testing.md  word-docs.md
tests/: live_smoke.py  smoke_test.py
