[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gt-code"
version = "0.2.0"
description = "GT-Code: a local, self-hosted CLI coding agent (Claude-Code-style) running on your own models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "PyYAML>=6.0",
    "numpy>=1.26",
    "rich>=13.7",
    "prompt_toolkit>=3.0",
    "beautifulsoup4>=4.12",
    "openpyxl>=3.1",
    "python-pptx>=0.6.23",
    "python-docx>=1.1",
]

[project.scripts]
gt = "gt.cli:main"

[tool.setuptools]
packages = ["gt"]
